--- a/landingPage.csproj
+++ b/landingPage.csproj
@@ -10,4 +10,8 @@
     <Folder Include="wwwroot\imgs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SendGrid" Version="9.25.1" />
+  </ItemGroup>
+
 </Project>
